intial project - ignore config file

--- a/pre_payment_management/WebAUI/Web.config
+++ b/pre_payment_management/WebAUI/Web.config
@@ -13,6 +13,7 @@
 
   <appSettings>
     <!-- SQL -->
+    <add key="ConnectionString" value="server=cnvm98;user id=sa;password=***;database=PrePaymentManagerment;"/>
     <!-- WEB SERVICE REFERENCE-->
     <add key="UserInfo.userinfo" value="http://cnvm93.ap.ads.lanxess:6666/webservice/userinfo.asmx"/>
     <add key="xEmail.xemail" value="http://cn-webapp01.ap.ads.lanxess:6666/webservice/xemail.asmx"/>
